Making all the actions in the articles controller need a logged in user.
For now, hiding the link which uses the authorisation code grant login flow.

Removing unused file.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         Signed in as <%= current_user.name %>!
         <%= link_to 'Sign out', logout_path %>
     <% else %>
-        <%= link_to 'Sign in with Report Bee', reportbee_login_path %>
+        <% # link_to 'Sign in with Report Bee', reportbee_login_path %>
         <%= link_to 'Sign in using local form', login_path %>
     <% end %>
   </div>
